--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,7 +1,7 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
@@ -16,6 +16,9 @@
   width: 100%;
   z-index: 2;
   font-family: var(--font-mono);
+}
+.description h3 {
+  padding-bottom: 3rem;
 }
 
 .description a {
@@ -41,7 +44,7 @@
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
+  grid-template-columns: repeat(3, minmax(25%, auto));
   width: var(--max-width);
   max-width: 100%;
 }
@@ -80,6 +83,11 @@
   padding: 4rem 0;
 }
 
+.center h1 {
+  font-size: 10rem;
+  text-align: center;
+}
+
 .center::before {
   background: var(--secondary-glow);
   border-radius: 50%;
@@ -97,7 +105,7 @@
 
 .center::before,
 .center::after {
-  content: '';
+  content: "";
   left: 50%;
   position: absolute;
   filter: blur(45px);
@@ -125,7 +133,7 @@
 
 .thirteen::before,
 .thirteen::after {
-  content: '';
+  content: "";
   position: absolute;
   z-index: -1;
 }
@@ -175,6 +183,9 @@
 
 /* Mobile */
 @media (max-width: 700px) {
+  .center h1 {
+    font-size: 5rem;
+  }
   .content {
     padding: 4rem;
   }
@@ -252,6 +263,10 @@
 
 /* Tablet and Smaller Desktop */
 @media (min-width: 701px) and (max-width: 1120px) {
+  .center h1 {
+    font-size: 8rem;
+  }
+
   .grid {
     grid-template-columns: repeat(2, 50%);
   }
